Bump Netty version to 4.2.17. Use ByteBufAllocator.DEFAULT everywhere, which is the AdaptiveByteBufAllocator. Introduce separate Prometheus metrics for the Netty allocators. The update to Java 25 changed the memory allocation technique and caused a test to fail that checks whether we can monitor the netty buffer pool memory usage correctly.